<?xml version="1.0" encoding="utf-8"?>
<!--
 @className CS 6301-022 User Interface Design
 * @author Ankit Tolia (abt140130)
 * @email-id abt140130@utdallas.edu
 * @version 1.0
 * @started date 30 Nov 2014
 * @Description : Barrel Race Game for an Android Device
 * @Purpose : Class Assignment
* @Description :  The screen displaying scores when user completes the game.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/gamecompleteTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/result_won"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enternameTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/enter_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/entername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/highscoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/scoreTxt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/submit"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>